Add singleline property for email edit text

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -39,6 +39,7 @@
             android:layout_below="@id/tv_email"
             android:hint="@string/email"
             android:maxLines="1"
+            android:singleLine="true"
             android:text="@string/default_login_text" />
 
         <TextView
