Change "Select your team" to "Your team" resource

--- a/app/src/main/res/layout/activity_choose_team.xml
+++ b/app/src/main/res/layout/activity_choose_team.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/your_team_capt"
+            android:text="@string/your_team"
             android:layout_marginBottom="34dp"/>
 
         <android.support.v7.widget.RecyclerView
