--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -10,14 +10,34 @@
         android:layout_marginBottom="@dimen/list_item_margin"
         android:layout_marginTop="@dimen/list_item_margin">
 
-        <ImageView
-            android:id="@+id/iv_preview_image"
+        <RelativeLayout
+            android:id="@+id/iv_preview_image_layout"
             android:layout_width="@dimen/list_item_image"
             android:layout_height="@dimen/list_item_image"
             android:layout_marginLeft="@dimen/list_item_margin"
-            android:layout_marginRight="@dimen/list_item_margin"
-            android:scaleType="fitXY"
-            android:src="@drawable/no_resource" />
+            android:layout_marginRight="@dimen/list_item_margin">
+
+            <ImageView
+                android:id="@+id/iv_preview_image"
+                android:layout_width="@dimen/list_item_image"
+                android:layout_height="@dimen/list_item_image"
+                android:src="@drawable/no_resource" />
+
+            <ImageView
+                android:id="@+id/iv_status_bg"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/no_resource_round_white" />
+
+            <ImageView
+                android:id="@+id/iv_status"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_margin="2dp"
+                android:src="@drawable/no_resource_round" />
+
+        </RelativeLayout>
+
 
         <ImageView
             android:id="@+id/iv_channel_icon"
@@ -26,7 +46,7 @@
             android:layout_alignBottom="@+id/tv_channel_name"
             android:layout_marginBottom="4dp"
             android:layout_marginRight="8dp"
-            android:layout_toRightOf="@id/iv_preview_image"
+            android:layout_toRightOf="@id/iv_preview_image_layout"
             android:scaleType="center"
             android:src="@drawable/ic_private_group" />
 
@@ -58,7 +78,7 @@
             android:layout_below="@id/tv_channel_name"
             android:layout_marginRight="@dimen/list_item_margin_double"
             android:layout_marginTop="@dimen/list_item_heading_bottom_margin"
-            android:layout_toRightOf="@id/iv_preview_image"
+            android:layout_toRightOf="@id/iv_preview_image_layout"
             android:maxLines="2"
             android:text="@string/example_message_preview"
             android:textColor="@color/textListSecondary"
