--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,8 @@
 
     <color name="tabSelected">#2bce7c</color>
     <color name="tabUnSelected">#c9cdd4</color>
+
+    <color name="status_online">#2bce7c</color>
+    <color name="status_idle">#f6c41d</color>
+    <color name="status_offline">#c9cdd4</color>
 </resources>
