Add disabling for choose server button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="primaryStart">#00CD80</color>
     <color name="primaryEnd">#00AC9D</color>
 
+    <color name="primaryStartDisabled">#7F00CD80</color>
+    <color name="primaryEndDisabled">#7F00AC9D</color>
+
     <color name="textPrimary">@android:color/black</color>
     <color name="textSecondary">@android:color/darker_gray</color>
 
