--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_email"
             android:hint="@string/email"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true"
             android:text="@string/default_login_text" />
