Fix toolbar title

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,6 +9,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        app:contentInsetStartWithNavigation="60dp"
         app:navigationIcon="@drawable/ic_hamburger" />
 
     <TextView
