--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -12,6 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        app:contentInsetStartWithNavigation="60dp"
         app:navigationIcon="@drawable/ic_hamburger" />
 
     <android.support.design.widget.TabLayout
