--- a/app/src/main/res/layout/list_item_post.xml
+++ b/app/src/main/res/layout/list_item_post.xml
@@ -1,6 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:background="@color/noResource"
-    android:orientation="vertical" />
+    android:layout_height="wrap_content"
+    android:background="@color/background"
+    android:minHeight="@dimen/list_item_min_height"
+    android:paddingBottom="@dimen/list_item_chat_padding"
+    android:paddingEnd="@dimen/list_item_chat_padding_start"
+    android:paddingStart="0dp">
+
+    <RelativeLayout
+        android:id="@+id/iv_preview_image_layout"
+        android:layout_width="@dimen/list_item_image_chat"
+        android:layout_height="@dimen/list_item_image_chat"
+        android:layout_marginLeft="@dimen/list_item_margin"
+        android:layout_marginRight="@dimen/list_item_margin">
+
+        <ImageView
+            android:id="@+id/iv_preview_image"
+            android:layout_width="@dimen/list_item_image_chat"
+            android:layout_height="@dimen/list_item_image_chat"
+            android:src="@drawable/no_resource" />
+
+        <ImageView
+            android:id="@+id/iv_status_bg"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/no_resource_round_white" />
+
+        <ImageView
+            android:id="@+id/iv_status"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_margin="2dp"
+            android:src="@drawable/no_resource_round" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/list_item_chat_padding_name"
+        android:layout_toEndOf="@id/iv_preview_image_layout"
+        android:singleLine="true"
+        android:textColor="@color/textListPrimary"
+        android:textSize="@dimen/list_item_chat_text_size" />
+
+    <TextView
+        android:id="@+id/tv_message"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tv_name"
+        android:layout_marginBottom="@dimen/list_item_chat_padding_timestamp"
+        android:layout_toEndOf="@id/iv_preview_image_layout"
+        android:background="@android:color/white"
+        android:fontFamily="sans-serif-light"
+        android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
+        android:paddingEnd="@dimen/list_item_chat_padding"
+        android:paddingStart="@dimen/list_item_chat_padding"
+        android:paddingTop="@dimen/list_item_chat_padding_timestamp"
+        android:singleLine="false"
+        android:textColor="@color/textListPrimary"
+        android:textSize="@dimen/list_item_chat_text_size" />
+
+    <TextView
+        android:id="@+id/tv_timestamp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tv_message"
+        android:layout_toEndOf="@id/iv_preview_image_layout"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/textListSecondary"
+        android:textSize="@dimen/list_item_chat_text_size" />
+
+</RelativeLayout>
