--- a/app/src/main/res/layout/list_item_post.xml
+++ b/app/src/main/res/layout/list_item_post.xml
@@ -3,15 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
-    android:minHeight="@dimen/list_item_min_height"
-    android:paddingBottom="@dimen/list_item_chat_padding"
-    android:paddingEnd="@dimen/list_item_chat_padding_start"
-    android:paddingStart="0dp">
+    android:minHeight="@dimen/list_item_min_height">
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="false"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/textListSecondary"
+        android:textSize="@dimen/list_item_chat_text_size"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/iv_preview_image_layout"
         android:layout_width="@dimen/list_item_image_chat"
         android:layout_height="@dimen/list_item_image_chat"
+        android:layout_below="@id/tv_date"
         android:layout_marginLeft="@dimen/list_item_margin"
         android:layout_marginRight="@dimen/list_item_margin">
 
@@ -36,41 +44,48 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/list_item_chat_padding_name"
-        android:layout_toEndOf="@id/iv_preview_image_layout"
-        android:singleLine="true"
-        android:textColor="@color/textListPrimary"
-        android:textSize="@dimen/list_item_chat_text_size" />
-
-    <TextView
-        android:id="@+id/tv_message"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tv_name"
-        android:layout_marginBottom="@dimen/list_item_chat_padding_timestamp"
         android:layout_toEndOf="@id/iv_preview_image_layout"
-        android:background="@android:color/white"
-        android:fontFamily="sans-serif-light"
-        android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
-        android:paddingEnd="@dimen/list_item_chat_padding"
-        android:paddingStart="@dimen/list_item_chat_padding"
-        android:paddingTop="@dimen/list_item_chat_padding_timestamp"
-        android:singleLine="false"
-        android:textColor="@color/textListPrimary"
-        android:textSize="@dimen/list_item_chat_text_size" />
+        android:orientation="vertical"
+        android:paddingEnd="@dimen/list_item_chat_padding_start"
+        android:paddingStart="0dp">
 
-    <TextView
-        android:id="@+id/tv_timestamp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tv_message"
-        android:layout_toEndOf="@id/iv_preview_image_layout"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@color/textListSecondary"
-        android:textSize="@dimen/list_item_chat_text_size" />
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_item_chat_padding_name"
+            android:singleLine="true"
+            android:textColor="@color/textListPrimary"
+            android:textSize="@dimen/list_item_chat_text_size" />
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/list_item_chat_padding_timestamp"
+            android:background="@android:color/white"
+            android:fontFamily="sans-serif-light"
+            android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
+            android:paddingEnd="@dimen/list_item_chat_padding"
+            android:paddingStart="@dimen/list_item_chat_padding"
+            android:paddingTop="@dimen/list_item_chat_padding_timestamp"
+            android:singleLine="false"
+            android:textColor="@color/textListPrimary"
+            android:textSize="@dimen/list_item_chat_text_size" />
+
+        <TextView
+            android:id="@+id/tv_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light"
+            android:paddingBottom="@dimen/list_item_chat_padding"
+            android:textColor="@color/textListSecondary"
+            android:textSize="@dimen/list_item_chat_text_size" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
