--- a/app/src/main/res/layout/list_item_post_my.xml
+++ b/app/src/main/res/layout/list_item_post_my.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
+    android:gravity="end"
     android:minHeight="@dimen/list_item_min_height"
-    android:paddingBottom="@dimen/list_item_chat_padding"
+    android:orientation="vertical"
     android:paddingEnd="@dimen/list_item_chat_padding"
     android:paddingStart="@dimen/list_item_chat_padding_start">
 
@@ -12,7 +13,6 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/list_item_chat_padding_name"
         android:singleLine="true"
         android:textColor="@color/textListPrimary"
@@ -22,8 +22,6 @@
         android:id="@+id/tv_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/tv_name"
         android:layout_marginBottom="@dimen/list_item_chat_padding_timestamp"
         android:background="@color/textListPrimary"
         android:fontFamily="sans-serif-light"
@@ -39,10 +37,9 @@
         android:id="@+id/tv_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/tv_message"
         android:fontFamily="sans-serif-light"
+        android:layout_marginBottom="@dimen/list_item_chat_padding"
         android:textColor="@color/textListSecondary"
         android:textSize="@dimen/list_item_chat_text_size" />
 
-</RelativeLayout>
+</LinearLayout>
