--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             app:contentInsetStartWithNavigation="60dp"
-            app:elevation="2dp"
-            app:navigationIcon="@drawable/ic_hamburger" />
+            app:elevation="2dp"/>
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
