Show in chat date if needed

--- a/app/src/main/res/layout/list_item_post.xml
+++ b/app/src/main/res/layout/list_item_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
@@ -7,13 +8,16 @@
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/list_item_chat_padding"
+        android:background="@drawable/bg_date"
         android:fontFamily="sans-serif-light"
-        android:textColor="@color/textListSecondary"
+        android:padding="@dimen/padding_default"
+        android:textColor="@color/textListPrimary"
         android:textSize="@dimen/list_item_chat_text_size"
-        android:visibility="gone" />
+        tools:text="2016-12-23" />
 
     <RelativeLayout
         android:id="@+id/iv_preview_image_layout"
@@ -47,6 +51,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/tv_date"
         android:layout_toEndOf="@id/iv_preview_image_layout"
         android:orientation="vertical"
         android:paddingEnd="@dimen/list_item_chat_padding_start"
@@ -66,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/list_item_chat_padding_timestamp"
-            android:background="@android:color/white"
+            android:background="@drawable/bg_post"
             android:fontFamily="sans-serif-light"
             android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
             android:paddingEnd="@dimen/list_item_chat_padding"
