--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -28,39 +28,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-<!--            <TextView
-                android:id="@+id/tv_empty_state"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/no_posts_to_display" />-->
+                android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_messages"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
-        </android.support.v4.widget.SwipeRefreshLayout>
 
-        <!--        <LinearLayout
-                    android:id="@+id/l_loading"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_messages"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_empty_state"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/margin_default">
+                    android:text="@string/no_posts_to_display"
+                    android:visibility="visible"/>
 
-                    <ProgressBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/margin_default" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/loading" />
-                </LinearLayout>-->
+            </FrameLayout>
+
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
 
