--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,6 +45,7 @@
     <dimen name="list_item_chat_padding_name">10dp</dimen>
     <dimen name="list_item_chat_padding_timestamp">16dp</dimen>
     <dimen name="list_item_chat_text_size">16sp</dimen>
+    <dimen name="list_item_chat_time_margin">8dp</dimen>
 
     <dimen name="post_message_corners">15dp</dimen>
 </resources>
