--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,6 +21,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/background"
         android:layout_weight="1">
 
         <android.support.v4.widget.SwipeRefreshLayout
@@ -42,9 +43,9 @@
 
                 <TextView
                     android:id="@+id/tv_empty_state"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="@string/no_posts_to_display" />
 
 
