--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,4 +63,18 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="SwitchChannelType" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/tabSelected</item>
+
+        <!--<item name="colorControlNormal">@color/tabSelected</item>-->
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/tabSelected</item>
+        <item name="android:colorBackground">@color/separator_list</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">@color/separator_list</item>
+    </style>
+
 </resources>
