--- a/app/src/main/res/layout/people_new_channel_item.xml
+++ b/app/src/main/res/layout/people_new_channel_item.xml
@@ -2,10 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/added_people_avatar"
+        android:id="@+id/pending_people_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="left" />
