--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,10 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="CircularCounter">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="BorderlessButton" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:textColor">@color/textSecondary</item>
     </style>
