code refactoring, add closing added people's panel if it empty

--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -29,7 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/dialog_create_channel_content_padding">
+            android:paddingLeft="@dimen/dialog_create_channel_content_padding"
+            android:paddingRight="@dimen/dialog_create_channel_content_padding">
 
             <com.applikey.mattermost.views.ChannelTypeView
                 android:id="@+id/channel_type_view"
