--- a/app/src/main/res/layout/activity_search_chat.xml
+++ b/app/src/main/res/layout/activity_search_chat.xml
@@ -9,7 +9,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:title="@string/action_search"/>
+        app:title="@string/action_search"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
