Set chat was viewed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="primaryEnd">#00AC9D</color>
 
     <color name="background">#f1f2f5</color>
+    <color name="unread_background">#f4f5f7</color>
 
     <color name="primaryStartDisabled">#7F00CD80</color>
     <color name="primaryEndDisabled">#7F00AC9D</color>
