--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -26,6 +26,7 @@
         <TextView
             android:id="@+id/tv_email"
             style="@style/TextHeadingSecondary"
+            android:padding = "@dimen/text_heading_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/login_screen_content_margin_top"
